# MultiIndexContainer

./: .gitattributes  .gitignore  BENCHMARKING.md  CMakeLists.txt  EXAMPLES.md  LICENSE  PROMPT.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml
benchmarks/: bench.cpp
examples/: composite_keys.cpp  const_elements.cpp  insert_diagnostics.cpp  leaderboard.cpp  lru_cache.cpp  modern_api.cpp  observed_table.cpp  observer_registry.cpp  order_book.cpp  relational_queries.cpp  static_table.cpp  symbol_table.cpp
include/mic/: multi_index.hpp
playground/: Playground.sln  Playground.vcxproj  Playground.vcxproj.filters  main.cpp
tests/: test_coverage.cpp  test_main.cpp  test_tu2.cpp
tools/: msvc.bat
